[package]
name = "minter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-kit = "0.4.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
ic-ledger-types = "0.1.0"
ed25519-compact = { version = "1.0.11", default-features = false }
sha2 = { version = "0.9", default-features = false }
serde = "1.0.132"
serde-big-array = { version = "0.3", features = ["const-generics"] }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"